Vast improvement on user experience while using the title manager - Added a search bar - Added a loading state to hide images if their size is not loaded, avoiding layout shift

--- a/app/(protected)/app/titles-manager/titles-manager.css
+++ b/app/(protected)/app/titles-manager/titles-manager.css
@@ -37,6 +37,7 @@
     justify-content: center;
     margin-right: auto;
     margin-left: auto;
+    visibility: hidden;
 }
 
 .masonry {
